manifests/app/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-postgres
  labels:
    app: app-postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: app-postgres

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app-postgres-statefulset
spec:
  serviceName: "app-postgres"
  replicas: 1
  selector:
    matchLabels:
      app: app-postgres
  template:
    metadata:
      labels:
        app: app-postgres
    spec:
      containers:
        - name: app-postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgredb
          volumeMounts:
            - name: postgredb
              mountPath: /var/lib/postgresql/data
              subPath: app-postgres
  volumeClaimTemplates:
    - metadata:
        name: postgredb
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi
