manifests/app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-task5-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-task5-service.auth.svc.cluster.local:9000/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/signin"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Username"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp($|/)(.*)
        backend:
          serviceName: app-task5-service
          servicePort: 9000
